fix : scrollbar in mobile device

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -139,4 +139,8 @@ table {
   *::-webkit-scrollbar-track {
     background: transparent;
   }
+  * {
+    scrollbar-width: thin;
+    scrollbar-color: #ff76ce transparent;
+  }
 }
